Kubernetes-prod/Frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: competex-frontend-deployment
  namespace: competex-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: competex-frontend
  template:
    metadata:
      labels:
        app: competex-frontend
    spec:
      tolerations: # Ensure pods are scheduled on appropriate nodes
      - key: "competex-frontend"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: competex-frontend
        image: ilum1/competex:master_frontend # your-repository/competex-backend:latest  # Replace with your container registry URL
        imagePullPolicy: Always  # Use "Always" to ensure the image is pulled from the registry # Alternative: use never if local
        ports:
        - containerPort: 8080
        - containerPort: 8081
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
