Kubernetes-prod/Frontend/competex-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: competex-frontend-service
spec:
  # The Service connects to Pods with the specified labels.
  selector:
    app: competex-frontend
  # ClusterIP makes the service accessible only within the cluster.
  type: ClusterIP
  ports:
  - protocol: TCP
    # Name for the HTTP port (must be unique within the service).
    name: http
    # The port that the service exposes inside the cluster.
    port: 8082
    # The port on the Pod that receives traffic.
    targetPort: 80
