Kubernetes-prod/Frontend/competex-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: competex-frontend-ingress
  namespace: competex-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: frontend.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: competex-frontend-service
            port:
              number: 8082
